testData/inspection/path/invalidMjmlFile.mjml
<mj-include
 <error descr="_include.txt is not resolving to a valid mjml file">path="_include.txt"</error>
/>
